Replace depreciated new Integer() with Integer.valueof()